--- a/v2 Forums/Base.lproj/LaunchScreen.storyboard
+++ b/v2 Forums/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina5_9" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,15 +15,34 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch" highlightedImage="launch" translatesAutoresizingMaskIntoConstraints="NO" id="7wF-NT-IJa">
+                                <rect key="frame" x="30" y="248.66666666666663" width="315" height="315"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="315" id="A4K-X4-F06"/>
+                                    <constraint firstAttribute="width" secondItem="7wF-NT-IJa" secondAttribute="height" multiplier="1:1" id="aho-CP-EAL"/>
+                                    <constraint firstAttribute="height" constant="315" id="kBt-2c-vul"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.40027129649999998" green="0.84496790170000002" blue="0.65483361480000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="7wF-NT-IJa" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="ZAP-lh-QrF"/>
+                            <constraint firstItem="7wF-NT-IJa" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="i7O-wM-OBH"/>
+                            <constraint firstItem="7wF-NT-IJa" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="xoX-3I-Mdz"/>
+                            <constraint firstItem="7wF-NT-IJa" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="1" id="zvL-H1-dwZ"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="50.399999999999999" y="373.89162561576359"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="launch" width="1024" height="1024"/>
+    </resources>
 </document>
