--- a/v2 Forums/Base.lproj/Main.storyboard
+++ b/v2 Forums/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina5_9" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -14,25 +14,25 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="v2_Forums" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <wkWebView multipleTouchEnabled="YES" contentMode="scaleToFill" allowsBackForwardNavigationGestures="YES" translatesAutoresizingMaskIntoConstraints="NO" id="imh-pp-kRl">
-                                <rect key="frame" x="0.0" y="44" width="375" height="768"/>
+                            <wkWebView contentMode="scaleToFill" allowsBackForwardNavigationGestures="YES" translatesAutoresizingMaskIntoConstraints="NO" id="imh-pp-kRl">
+                                <rect key="frame" x="0.0" y="20" width="414" height="716"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <wkWebViewConfiguration key="configuration" allowsInlineMediaPlayback="YES">
+                                <wkWebViewConfiguration key="configuration" allowsInlineMediaPlayback="YES" applicationNameForUserAgent="v2 Forums">
                                     <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" audio="YES" video="YES"/>
-                                    <wkPreferences key="preferences"/>
+                                    <wkPreferences key="preferences" javaScriptCanOpenWindowsAutomatically="YES"/>
                                 </wkWebViewConfiguration>
+                                <string key="customUserAgent">Mozilla/5.0 (iPhone; CPU iPhone OS 10_2_1 like Mac OS X) AppleWebKit/602.4.6 (KHTML, like Gecko) Version/10.0 Mobile/14D27 Safari/602.1</string>
                             </wkWebView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="imh-pp-kRl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="4p3-nc-apY"/>
-                            <constraint firstAttribute="bottom" secondItem="imh-pp-kRl" secondAttribute="bottom" id="mgI-Se-zlh"/>
-                            <constraint firstItem="imh-pp-kRl" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="r4g-XY-etb"/>
-                            <constraint firstItem="imh-pp-kRl" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="rov-dA-Mso"/>
-                            <constraint firstItem="imh-pp-kRl" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="t2K-9b-vVk"/>
+                            <constraint firstItem="imh-pp-kRl" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="2hK-M3-e30"/>
+                            <constraint firstItem="imh-pp-kRl" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="8vb-ni-ykE"/>
+                            <constraint firstItem="imh-pp-kRl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Tec-SU-L9D"/>
+                            <constraint firstItem="imh-pp-kRl" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="avA-gU-KhC"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -42,7 +42,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="132.88043478260872" y="130.43478260869566"/>
+            <point key="canvasLocation" x="128.98550724637681" y="128.80434782608697"/>
         </scene>
     </scenes>
 </document>
